2008-03-11  Inge Wallin  <inge@lysator.liu.se>

	Finalize the Projection'ification of the Measuretool:
	*src/lib/MeasureTool.cpp (paintDistancePoints): Call
	paintDistancePoints
	(paintDistancePoints): new function
	(sphericalPaintMeasurePoints): removed
	(rectangularPaintMeasurePoints): removed
	(paintMark): Make it repeat in X if the projection allows it
	(rectangularPaintMark): removed
	
2008-03-10  Inge Wallin  <inge@lysator.liu.se>

	Get rid of a few unneeded members:
	* src/lib/MeasureTool.{h,cpp} (m_totalDistance): removed
	(m_rad2Pixel): removed
	(m_empty): removed
	(me_linecolor): removed

	Fix Krazy issues: proper include directives:
	/src/lib/MarbleWidget.h,
	/src/lib/FileStoragePolicy.cpp,
	/src/lib/MarbleMap.cpp,
	/src/lib/StoragePolicy.h,
	/src/lib/MarbleMap_p.h,
	/src/lib/TileCreatorDialog.cpp,
	/src/lib/MarblePlacemarkModel.cpp,
	/src/lib/CacheStoragePolicy.cpp,
	/src/lib/MarbleMap.h,
	/src/lib/DiscCache.cpp,
	/src/marble_part.cpp:
	Fix include directives

2008-03-10  Torsten Rahn  <rahn@kde.org>

    * src/lib/geodata/CMakeLists.txt:
    * src/lib/geodata/handlers/dgml/DGMLPropertyTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLSettingsTagHandler.cpp:
    * src/lib/geodata/handlers/dgml/DGMLAttributeDictionary.{cpp,h}:
    * src/lib/geodata/scene/GeoSceneIcon.h:
    * src/lib/geodata/scene/GeoSceneHead.h:
    * src/lib/geodata/scene/GeoSceneSettings.{cpp,h}:
    * src/lib/geodata/scene/GeoSceneProperty.{cpp,h}:

    Starting to get properties parsed correctly.

2008-03-10  Torsten Rahn  <rahn@kde.org>

    * src/lib/geodata/CMakeLists.txt:
    * src/lib/geodata/GeoDataTest.cpp:
    * src/lib/geodata/handlers/dgml/DGMLElementDictionary.h:
    * src/lib/geodata/handlers/dgml/DGMLDiscreteTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLMaximumTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLMinimumTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLVisibleTagHandler.{cpp,h}: