@@ -52,6 +52,8 @@ SET( geodata_handlers_dgml_SRCS
         geodata/handlers/dgml/DGMLMinimumTagHandler.cpp
         geodata/handlers/dgml/DGMLMaximumTagHandler.cpp
         geodata/handlers/dgml/DGMLPropertyTagHandler.cpp
+        geodata/handlers/dgml/DGMLAvailableTagHandler.cpp
+        geodata/handlers/dgml/DGMLEnabledTagHandler.cpp
         geodata/handlers/dgml/DGMLElementDictionary.cpp
         geodata/handlers/dgml/DGMLAttributeDictionary.cpp
         geodata/handlers/dgml/DGMLAuxillaryDictionary.cpp
